--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <h5>Title description, Dec 7, 2017</h5>
             <div class="fakeimg" style="height:150px;">Image</div>
             <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <p>Coursework included: Object-Oriented Programming, Data Structures and Algorithms, Computer Networks, Operating Systems, and Database Systems</p>
             <br>
             <h5>Dominica State College</h5>
             <h5>Title description, Sep 2, 2017</h5>
