--- a/index.html
+++ b/index.html
@@ -146,15 +146,14 @@
             <br>
             <h2>Skills</h2>
             <h5>Programming</h5>
-            <p>C++, Java, Python</p>
+            <p>C++, Java, Python, (Learning C#)</p>
             <h5>Web Development</h5>
-            <p>HTML, CSS, JavaScript</p>
+            <p>HTML, CSS, JavaScript, (Learning React)</p>
             <h5>Data management</h5>
             <p>PHP, SQL</p>
             <h5>In addition</h5>
             <p>Adept with Google Workspace productivity and collaboration tools.</p>
-            <p>I am currently in the process of learning C# and react.</p>
-            <p>As well as on track to obtain Cisco CCNA certification</p>
+            <p>As well as on track to obtain Cisco CCNA certification.</p>
             <br>
             <h2>Follow me</h2>
             <p>Lorem ipsum dolor sit ame.</p>
@@ -190,7 +189,6 @@
             <h5>Title description, Sep 2, 2017</h5>
             <div class="fakeimg" style="height:150px;">Image</div>
             <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </div>
     </div>
 
