--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
             <br>
             <h2>Education</h2>
             <h5>Texas A&M University - Commerce</h5>
-            <h5>Title description, Dec 7, 2017</h5>
+            <h5>Bachelor of Science, Computer Science, Dec 2019 to Jan 2022</h5>
             <div class="fakeimg" style="height:150px;">Image</div>
             <p>Some text..</p>
             <p>Coursework included: Object-Oriented Programming, Data Structures and Algorithms, Computer Networks, Operating Systems, and Database Systems</p>
             <br>
             <h5>Dominica State College</h5>
-            <h5>Title description, Sep 2, 2017</h5>
+            <h5>Associate of Science, Computer Science and Mathematics, Sept 2015 to May 2018</h5>
             <div class="fakeimg" style="height:150px;">Image</div>
             <p>Some text..</p>
         </div>
