--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="row">
         <div class="side">
             <h2>Hello there!</h2>
-            <div class="fakeimg" style="height: 200px;">Image</div>
+            <div class="fakeimg" style="height: 200px; width: 200px; border-radius: 50%">Image</div>
             <h5>Nice to meet you!</h5>
             <br>
             <h2>Skills</h2>
