--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
     <div class="row">
         <div class="side">
-            <h2>Hello there!</h2>
-            <div class="fakeimg" style="height: 200px; width: 200px; border-radius: 50%">Image</div>
-            <h5>Nice to meet you!</h5>
+            <h2 style="text-align: center">Hello there!</h2>
+            <div class="fakeimg" style="height: 150px; width: 150px; border-radius: 50%; text-align: center">Image</div>
+            <h5 style="text-align: center">Nice to meet you!</h5>
             <br>
             <h2>Skills</h2>
             <h5>Programming</h5>
