--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="row">
         <div class="side">
             <h2 style="text-align: center">Hello there!</h2>
-            <div class="fakeimg" style="height: 150px; width: 150px; border-radius: 50%; text-align: center; justify-content: center;">Image</div>
+            <div class="fakeimg" style="height: 150px; width: 150px; border-radius: 50%; text-align: center:">Image</div>
             <h5 style="text-align: center">Nice to meet you!</h5>
             <br>
             <h2>Skills</h2>
