--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
     <div class="row">
         <div class="side">
             <h2 style="text-align: center">Hello there!</h2>
-            <div class="fakeimg" style="height: 150px; width: 150px; border-radius: 50%; text-align: center:">Image</div>
+            <div class="fakeimg" style="height: 150px; width: 150px; border-radius: 50%; text-align: center">Image</div>
             <h5 style="text-align: center">Nice to meet you!</h5>
             <br>
-            <h2>Skills</h2>
+            <h2 style="text-align: center">Skills</h2>
             <h5>Programming</h5>
             <p>C++, Java, Python, (Learning C#)</p>
             <h5>Web Development</h5>
@@ -155,7 +155,7 @@
             <p>Adept with Google Workspace productivity and collaboration tools.</p>
             <p>As well as on track to obtain Cisco CCNA certification.</p>
             <br>
-            <h2>Follow me</h2>
+            <h2 style="text-align: center">Follow me</h2>
             <p>Lorem ipsum dolor sit ame.</p>
             <div class="fakeimg" style="height:60px;">Instagram</div><br>
             <div class="fakeimg" style="height:60px;">Github</div><br>
