--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             width: 100%;
             padding: 20px;
         }
+        
+        .center {
+            text-align: center;
+        }
 
         /* Footer */
         .footer {
@@ -142,9 +146,9 @@
         <div class="side">
             <h2 style="text-align: center">Hello there!</h2>
             <div class="fakeimg" style="height: 150px; width: 150px; border-radius: 50%; text-align: center">Image</div>
-            <h5 style="text-align: center">Nice to meet you!</h5>
+            <h5 class="center">Nice to meet you!</h5>
             <br>
-            <h2 style="text-align: center">Skills</h2>
+            <h2 class="center">Skills</h2>
             <h5>Programming</h5>
             <p>C++, Java, Python, (Learning C#)</p>
             <h5>Web Development</h5>
@@ -155,7 +159,7 @@
             <p>Adept with Google Workspace productivity and collaboration tools.</p>
             <p>As well as on track to obtain Cisco CCNA certification.</p>
             <br>
-            <h2 style="text-align: center">Follow me</h2>
+            <h2 class="center">Follow me</h2>
             <p>Lorem ipsum dolor sit ame.</p>
             <div class="fakeimg" style="height:60px;">Instagram</div><br>
             <div class="fakeimg" style="height:60px;">Github</div><br>
@@ -164,10 +168,10 @@
         </div>
         
         <div class="main">
-            <h2>Who I am</h2>
+            <h2 class="center">Who I am</h2>
             <p>I'm a dedicated, enthusiastic person pursuing a career in software development with at least one year of expertise in Python, C++, and Java. I have great communication skills, a quick learning curve, and strong problem-solving abilities in addition to my technical abilities.</p>
             <br>
-            <h2>Experience</h2>
+            <h2 class="center">Experience</h2>
             <h5>Team Member - Select Service Partner</h5>
             <div class="fakeimg" style="height:100px;">Image</div>
             <p>Some text..</p>
@@ -178,7 +182,7 @@
             <div class="fakeimg" style="height:100px;">Image</div>
             <p>Some text..</p>
             <br>
-            <h2>Education</h2>
+            <h2 class="center">Education</h2>
             <h5>Texas A&M University - Commerce</h5>
             <h5>Bachelor of Science, Computer Science, Dec 2019 to Jan 2022</h5>
             <div class="fakeimg" style="height:150px;">Image</div>
