--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         .header {
             padding: 50px;
             text-align: center;
-            background: #1abc9c;
+            background: #0072b1;
             color: white;
         }
 
