--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Jai Williams</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/b3718d7d29.js" crossorigin="anonymous"></script>
     <style>
         * {
             box-sizing: border-box;
@@ -163,7 +164,7 @@
             <p>Lorem ipsum dolor sit ame.</p>
             <div class="fakeimg" style="height:60px;">Instagram</div><br>
             <div class="fakeimg" style="height:60px;">Github</div><br>
-            <div class="fakeimg" style="height:60px;">LinkedIn</div>
+            <div class="fakeimg" style="height:60px;"><i class="fa-brands fa-square-github"></i>LinkedIn</div>
             <br>
         </div>
         
