--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
             <br>
             <h2 class="center">Follow me</h2>
             <p>Lorem ipsum dolor sit ame.</p>
-            <div class="fakeimg" style="height:60px;">Instagram</div><br>
-            <div class="fakeimg" style="height:60px;">Github</div><br>
-            <div class="fakeimg" style="height:60px;"><i class="fa-brands fa-square-github"></i>LinkedIn</div>
+            <div class="fakeimg" style="height:60px;"><i class="fa-brands fa-square-instagram"></i>  Instagram</div><br>
+            <div class="fakeimg" style="height:60px;"><i class="fa-brands fa-square-github"></i>  Github</div><br>
+            <div class="fakeimg" style="height:60px;"><i class="fa-brands fa-linkedin"></i>  LinkedIn</div>
             <br>
         </div>
         
