--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 
     <div class="navbar">
-        <a href="#" class="active">Home</a>
+        <a href="https://jai-williams.github.io/" class="active">Home</a>
         <a href="#">More About Me</a>
         <a href="#" class="right">Contact</a>
     </div>
@@ -162,9 +162,9 @@
             <br>
             <h2 class="center">Follow me</h2>
             <p>Lorem ipsum dolor sit ame.</p>
-            <div class="fakeimg" style="height:50px;"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</div><br>
-            <div class="fakeimg" style="height:50px;"><i class="fa-brands fa-square-github fa-2xl"></i>  Github</div><br>
-            <div class="fakeimg" style="height:50px;"><i class="fa-brands fa-linkedin fa-2xl"></i>  LinkedIn</div>
+            <div class="fakeimg" style="height:50px;"><a href="https://www.instagram.com/jaiwilliams767/"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</a></div><br>
+            <div class="fakeimg" style="height:50px;"><a href="https://github.com/Jai-Williams"><i class="fa-brands fa-square-github fa-2xl"></i>  Github</a></div><br>
+            <div class="fakeimg" style="height:50px;"><a href="https://www.linkedin.com/in/jai-g-williams/"><i class="fa-brands fa-linkedin fa-2xl"></i>  LinkedIn</a></div>
             <br>
         </div>
         
