--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
             padding: 20px;
         }
         
+        /* unvisited link  */
+        a:link    {
+            color:#000;}
+        /* visited link    */  
+        a:visited {
+            color:#000;}  
+        /* mouse over link */
+        a:hover   {
+            color:#000;}  
+        /* selected link   */
+        a:active  {
+            color:#000;} 
+        
+        /* center text */
         .center {
             text-align: center;
         }
