--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
         
         /* unvisited link  */
         a:link    {
-            color:#000;}
+            color:#000; text-decoration: none;}
         /* visited link    */  
         a:visited {
-            color:#000;}  
+            color:#000; text-decoration: none;}  
         /* mouse over link */
         a:hover   {
-            color:#000;}  
+            color:#000; text-decoration: none;}  
         /* selected link   */
         a:active  {
-            color:#000;} 
+            color:#000; text-decoration: none;} 
         
         /* center text */
         .center {
