--- a/index.html
+++ b/index.html
@@ -101,18 +101,19 @@
             padding: 20px;
         }
         
+        .socials {}
         /* unvisited link  */
-        a:link    {
-            color:#000; text-decoration: none;}
-        /* visited link    */  
-        a:visited {
-            color:#000; text-decoration: none;}  
-        /* mouse over link */
-        a:hover   {
-            color:#000; text-decoration: none;}  
-        /* selected link   */
-        a:active  {
-            color:#000; text-decoration: none;} 
+            .socials a:link {
+                color:#000; text-decoration: none;}
+            /* visited link    */  
+            .socials a:visited {
+                color:#000; text-decoration: none;}  
+            /* mouse over link */
+            .socials a:hover {
+                color:#000; text-decoration: none;}  
+            /* selected link   */
+            .socials a:active {
+                color:#000; text-decoration: none;} 
         
         /* center text */
         .center {
