--- a/index.html
+++ b/index.html
@@ -95,14 +95,13 @@
         }
 
         /* Fake image, just for this example */
-        .fakeimg {
+        .fakeimg, .socials {
             background-color: #aaa;
             width: 100%;
             padding: 20px;
         }
         
-        .socials {}
-        /* unvisited link  */
+            /* unvisited link  */
             .socials a:link {
                 color:#000; text-decoration: none;}
             /* visited link    */  
@@ -177,9 +176,9 @@
             <br>
             <h2 class="center">Follow me</h2>
             <p>Lorem ipsum dolor sit ame.</p>
-            <div class="fakeimg" style="height:50px;"><a href="https://www.instagram.com/jaiwilliams767/"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</a></div><br>
-            <div class="fakeimg" style="height:50px;"><a href="https://github.com/Jai-Williams"><i class="fa-brands fa-square-github fa-2xl"></i>  Github</a></div><br>
-            <div class="fakeimg" style="height:50px;"><a href="https://www.linkedin.com/in/jai-g-williams/"><i class="fa-brands fa-linkedin fa-2xl"></i>  LinkedIn</a></div>
+            <div class="socials" style="height:50px;"><a href="https://www.instagram.com/jaiwilliams767/"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</a></div><br>
+            <div class="socials" style="height:50px;"><a href="https://github.com/Jai-Williams"><i class="fa-brands fa-square-github fa-2xl"></i>  Github</a></div><br>
+            <div class="socials" style="height:50px;"><a href="https://www.linkedin.com/in/jai-g-williams/"><i class="fa-brands fa-linkedin fa-2xl"></i>  LinkedIn</a></div>
             <br>
         </div>
         
