--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h5>Data management</h5>
             <p>PHP, SQL</p>
             <h5>In addition</h5>
-            <p>Adept with Google Workspace productivity and collaboration tools.</p>
+            <p>Adept with Office 365 and Google Workspace productivity & collaboration tools.</p>
             <p>As well as on track to obtain Cisco CCNA certification.</p>
             <br>
             <h2 class="center">Follow me</h2>
