--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     <div class="header">
         <h1>Jai Williams</h1>
         <p>This is a <b>responsive</b> website I created.</p>
+        <p>This website serves not only as a portfolio but a testing ground where I experiment with web development practices.</p>
     </div>
 
     <div class="navbar">
@@ -171,7 +172,7 @@
 
     <div class="row">
         <div class="side">
-            <h2 style="text-align: center">Hello there!</h2>
+            <h2 style="text-align: center">Hello World!</h2>
             <div class="fakeimg headshot">Image</div>
             <h5 class="center">Nice to meet you!</h5>
             <br>
@@ -179,15 +180,21 @@
             <h5>Programming</h5>
             <p>C++, Java, Python, (Learning C#)</p>
             <h5>Web Development</h5>
-            <p>HTML, CSS, JavaScript, (Learning React)</p>
+            <p>HTML, CSS, JavaScript, Bootstrap, (Learning React)</p>
             <h5>Data management</h5>
-            <p>PHP, SQL</p>
+            <p>PHP, MySQL</p>
             <h5>In addition</h5>
-            <p>Adept with Office 365 and Google Workspace productivity & collaboration tools.</p>
-            <p>As well as on track to obtain Cisco CCNA certification.</p>
+            <p>Currently studying to obtain the following certifications:</p>
+            <p>
+                <ul>
+                    <li><b>Cisco CCNA</b></li>
+                    <li><b>AWS Cloud practitioner</b></li>
+                    <li><b>AWS Solutions Architect</b></li>
+                </ul>
+            </p>
             <br>
             <h2 class="center">Follow me</h2>
-            <p>For a glimpse into my life check out my socials!</p>
+            <p>Feel free to follow or connect with me!</p>
             <div class="socials" style="height:50px;"><a href="https://www.instagram.com/jaiwilliams767/" target="_blank"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</a></div><br>
             <div class="socials" style="height:50px;"><a href="https://github.com/Jai-Williams" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i>  Github</a></div><br>
             <div class="socials" style="height:50px;"><a href="https://www.linkedin.com/in/jai-g-williams/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i>  LinkedIn</a></div>
@@ -196,18 +203,25 @@
         
         <div class="main">
             <h2 class="center">Who I am</h2>
-            <p>I'm an innovative, task-driven proffesional pursuing a technical career with at least one year of expertise in Python, C++, and Java. I have great communication skills, a quick learning curve, and strong problem-solving abilities in addition to my technical abilities.</p>
+            <p>I'm an innovative, task-driven proffesional pursuing a technical career with at least one year of experience in Python, C++, and Java. I have great communication skills, a quick learning curve, and strong problem-solving abilities in addition to my technical abilities.</p>
+            <p>
+                <ul>
+                    <li>Knowledge of <b>Agile</b> development methodology and source control like GIT</li>
+                    <li>Keen willingness to learn new coding languages, proactive nature to expand knowledge base</li>
+                    <li>Working knowledge of <b>Google Workspace</b> productivity and collaboration tools</li>
+                    <li>Working knowledge of <b>Office 365</b> (Teams, Outlook, Word & Excel)</li>
+                    <li>Able to collaborate with a team and contribute to cross-functional planning and project meetings</li>
+                    <li>Familiar with basic networking concepts and to troubleshooting techniques</li>
+                </ul>
+            </p>
             <br>
             <h2 class="center">Experience</h2>
             <h5>Team Member - Select Service Partner</h5>
             <div class="fakeimg" style="height:100px;">Image</div>
-            <p>Some text..</p>
             <h5>Student Project Assistant - Texas A&M University - Commerce</h5>
             <div class="fakeimg" style="height:100px;">Image</div>
-            <p>Some text..</p>
             <h5>Residential Assistant - Texas A&M University - Commerce</h5>
             <div class="fakeimg" style="height:100px;">Image</div>
-            <p>Some text..</p>
             <br>
             <h2 class="center">Education</h2>
             <h5>Texas A&M University - Commerce</h5>
@@ -218,7 +232,6 @@
             <h5>Dominica State College</h5>
             <h5>Associate of Science, Computer Science and Mathematics, Sept 2015 to May 2018</h5>
             <div class="fakeimg" style="height:100px;">Image</div>
-            <p>Some text..</p>
         </div>
     </div>
 
