--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="header">
         <h1>Jai Williams</h1>
         <p>This is a <b>responsive</b> website I created.</p>
-        <p>This website serves not only as a portfolio but a testing ground where I experiment with web development practices.</p>
+        <p>This website serves as an online resume and portfolio.</p>
     </div>
 
     <div class="navbar">
@@ -178,16 +178,20 @@
             <br>
             <h2 class="center">Skills</h2>
             <h5>Programming</h5>
-            <p>C++, Java, Python, (Learning C#)</p>
+            <p>C++, Java, Python</p>
             <h5>Web Development</h5>
-            <p>HTML, CSS, JavaScript, Bootstrap, (Learning React)</p>
+            <p>HTML, CSS, JavaScript, Bootstrap, React</p>
             <h5>Data management</h5>
-            <p>PHP, MySQL</p>
+            <p>PHP, SQL</p>
             <h5>In addition</h5>
             <p>Currently studying to obtain the following certifications:</p>
             <p>
                 <ul>
+                    <li><b>Microsoft AZ-900</b></li>
+                    <li><b>Microsoft MS-500</b></li>
+                    <li><b>Comptia Security +</b></li>
                     <li><b>Cisco CCNA</b></li>
+                    <li><b>ISC CC</b></li>
                     <li><b>AWS Cloud practitioner</b></li>
                     <li><b>AWS Solutions Architect</b></li>
                 </ul>
@@ -203,7 +207,10 @@
         
         <div class="main">
             <h2 class="center">Who I am</h2>
-            <p>I'm an innovative, task-driven proffesional pursuing a technical career with at least one year of experience in Python, C++, and Java. I have great communication skills, a quick learning curve, and strong problem-solving abilities in addition to my technical abilities.</p>
+            <p>
+                I'm an innovative, task-driven proffesional professional who loves all things technical. My technical career boasts over a year of experience Information Security. 
+                I have great communication skills, a quick learning curve, and strong problem-solving abilities to compliment my technical abilities.
+            </p>
             <p>
                 <ul>
                     <li>Knowledge of <b>Agile</b> development methodology and source control like GIT</li>
@@ -216,6 +223,10 @@
             </p>
             <br>
             <h2 class="center">Experience</h2>
+            <h5>Business Support Officer - Lyra Health International</h5>
+            <div class="fakeimg" style="height:100px;">Image</div>
+            <h5>Customer Support - Jeton</h5>
+            <div class="fakeimg" style="height:100px;">Image</div>
             <h5>Team Member - Select Service Partner</h5>
             <div class="fakeimg" style="height:100px;">Image</div>
             <h5>Student Project Assistant - Texas A&M University - Commerce</h5>
