--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <br>
             <h2 class="center">Follow me</h2>
             <p>Feel free to follow or connect with me!</p>
-            <div class="socials" style="height:50px;"><a href="https://www.instagram.com/jaiwilliams767/" target="_blank"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</a></div><br>
+            <div class="socials" style="height:50px" text-align="center";><a href="https://www.instagram.com/jaiwilliams767/" target="_blank"><i class="fa-brands fa-square-instagram fa-2xl"></i>  Instagram</a></div><br>
             <div class="socials" style="height:50px;"><a href="https://github.com/Jai-Williams" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i>  Github</a></div><br>
             <div class="socials" style="height:50px;"><a href="https://www.linkedin.com/in/jai-g-williams/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i>  LinkedIn</a></div>
             <br>
